examples/test/testpolicy14026.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14026
  namespace: namespace418
spec:
  podSelector:
    matchLabels:
      key13: value0
      key7: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value31
          key32: value1
          key38: value10
      podSelector:
        matchLabels:
          key33: value47
          key17: value34
